--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="60dp">
+            android:layout_marginTop="30dp">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/profile_SIV"
@@ -60,9 +60,10 @@
                 android:textSize="28sp"
                 android:textAllCaps="false"/>
             <TextView
+                android:id="@+id/fullNameHomeTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name "
+                android:text="Name"
                 android:textStyle="bold|normal"
                 android:textSize="28sp"
                 android:textAllCaps="false"/>
@@ -70,6 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="! "
+                android:layout_marginStart="5dp"
                 android:textStyle="bold|normal"
                 android:textSize="28sp"
                 android:textAllCaps="false"/>
@@ -90,7 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp">
 
             <LinearLayout
