--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -141,13 +141,13 @@
                         android:textStyle="bold" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/forget_passwordBtn"
+                        android:id="@+id/change_passwordBtn"
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="25dp"
                         android:background="@drawable/btn_round_1"
                         android:clickable="true"
-                        android:text="Forget Password"
+                        android:text="Change Password"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="16sp"
